fix column alignment

--- a/src/App.css
+++ b/src/App.css
@@ -414,3 +414,10 @@ body {
 .sidebar-footer a:hover {
   color: #333;
 }
+
+.table td:nth-child(5),
+.table td:nth-child(6),
+.table th:nth-child(5),
+.table th:nth-child(6) {
+  text-align: right;
+}
